Fix incorrectly-named vertical spacing variables

--- a/scss/_base_blockquotes.scss
+++ b/scss/_base_blockquotes.scss
@@ -4,7 +4,7 @@
 @mixin vf-b-blockquotes {
   blockquote {
     border-left: 2px solid $color-mid-dark;
-    margin-bottom: $spv-inner--medium;
+    margin-bottom: $spv-inner--large;
     margin-left: 0;
     margin-top: 0;
     overflow: auto; // include margins of children into it's own height
