--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -31,13 +31,13 @@
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
-    height: $spv-inner--medium;
+    height: $spv-inner--large;
     overflow: hidden;
     padding: 0;
     position: absolute;
     right: $sph-inner;
     text-indent: calc(100% + 10rem);
-    top: $spv-inner--medium;
+    top: $spv-inner--large;
     vertical-align: sub;
     white-space: nowrap;
     width: $sph-inner;
@@ -50,6 +50,6 @@
   .p-subnav__item {
     background-color: $color-navigation-background;
     display: block;
-    padding: $spv-inner--large $grid-margin-width;
+    padding: $spv-inner--medium $grid-margin-width;
   }
 }
